--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
     "start": "node -r dotenv/config  src/index.js",
     "dev": "nodemon -r dotenv/config  src/index.js"
   },
-  "author": "",
+  "author": "Ankit Sharma",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.28",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "socket.io": "^4.7.5",
     "winston": "^3.13.0"
   },
