--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
+
 {
-"version": 2,
-"builds": [{"src": "./src/index.js", "use": "@vercel/node"}],
-"routes": [{"src": "/(.*)", "dest": "/"}],
+  "version": 2,
+  "builds": [
+    { "src": "src/index.js", "use": "@now/node", "config": { "maxLambdaSize": "15mb" } }
+  ],
+  "routes": [
+    { "src": "/static/(.*)", "dest": "/public/$1" },
+    { "src": "/(.*)", "dest": "/src/index.js" }
+  ]
 }
