--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,16 @@
-
 {
   "version": 2,
   "builds": [
-    { "src": "src/index.js", "use": "@now/node", "config": { "maxLambdaSize": "15mb" } }
+    {
+      "src": "src/**/*.js",
+      "use": "@vercel/node",
+      "config": { "maxLambdaSize": "10mb" }
+    }
   ],
   "routes": [
-    { "src": "/static/(.*)", "dest": "/public/$1" },
-    { "src": "/(.*)", "dest": "/src/index.js" }
+    {
+      "src": "/(.*)",
+      "dest": "/src/index.js"
+    }
   ]
 }
