--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ EXPRESS_SESSION_SECRET
 
 
 # ################ ENV VARS TO REDIRECT WHEN USER CLICKS ON THE FORGET PASSWORD LINK SENT ON THEIR EMAIL #################
-FORGOT_PASSWORD_REDIRECT_URL=http://localhost:3000/forgot-password  # Frontend url where the user should be redirected when the user clicks on the reset password link sent to their email.
+FORGOT_PASSWORD_REDIRECT_URL=http://localhost:5173/reset-password  # Frontend url where the user should be redirected when the user clicks on the reset password link sent to their email.
 # ################ ENV VARS TO REDIRECT WHEN USER CLICKS ON THE FORGET PASSWORD LINK SENT ON THEIR EMAIL #################
