--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Api:DEV",
+      "name": "api:dev",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}\\src\\index.js"
     }
