--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatapp",
+  "name": "nodejs-rest-api",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -17,7 +17,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-validator": "^7.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.28",
@@ -26,7 +25,6 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "slugify": "^1.6.6",
-    "socket.io": "^4.7.5",
     "uuid": "^10.0.0",
     "winston": "^3.13.0"
   },
