--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@eslint/js": "^9.6.0",
     "eslint": "^9.6.0",
     "globals": "^15.7.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4"
   }
 }
