--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "type": "module",
   "scripts": {
     "start": "node -r dotenv/config  src/index.js",
-    "dev": "nodemon -r dotenv/config  src/index.js"
+    "dev": "nodemon -r dotenv/config  src/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch", 
+    "test:coverage": "jest --coverage", 
+    "test:debug": "node --inspect-brk ./node_modules/.bin/jest --runInBand"
   },
   "author": "Ankit Sharma",
   "license": "ISC",
@@ -29,7 +33,10 @@
     "winston": "^3.13.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.6.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.6.0",
     "globals": "^15.7.0",
     "jest": "^29.7.0",
