--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node -r dotenv/config  src/index.js --no-deprecation",
-    "dev": "nodemon -r dotenv/config  src/index.js --no-deprecation",
+    "start": "node -r dotenv/config  src/index.js",
+    "dev": "nodemon -r dotenv/config  src/index.js",
     "test": "jest",
-    "test:watch": "jest --watch", 
-    "test:coverage": "jest --coverage", 
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "test:debug": "node --inspect-brk ./node_modules/.bin/jest --runInBand"
   },
   "author": "Ankit Sharma",
@@ -41,6 +41,8 @@
     "globals": "^15.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
