--- a/config/.env.development
+++ b/config/.env.development
@@ -2,6 +2,7 @@ PORT=7800
 MONGODB_URI=mongodb+srv://root:root@cluster0.a6hx6ac.mongodb.net
 DB_NAME=techgik
 NODE_ENV=development
+NODE_VERSION=22.12.0
 
 
 
