--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "type": "module",
   "scripts": {
     "start": "node -r dotenv/config  src/index.js",
-    "dev": "nodemon -r dotenv/config  src/index.js",
-    "test": "jest",
+    "dev": "NODE_ENV=development nodemon -r dotenv/config  src/index.js",
+    "prod": "NODE_ENV=production node -r dotenv/config  src/index.js",
+    "test": "NODE_ENV=development jest --detectOpenHandles",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:debug": "node --inspect-brk ./node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk ./node_modules/.bin/jest --runInBand",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write ."
   },
   "author": "Ankit Sharma",
   "license": "ISC",
@@ -23,6 +27,7 @@
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mailgen": "^2.0.28",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
@@ -37,10 +42,16 @@
     "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.6.0",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.6.0",
+    "eslint": "^9.17.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
+    "prettier": "^3.4.2",
     "supertest": "^7.0.0",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
