--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,9 +38,5 @@
       }
     }
   ],
-  "ignorePatterns":["node_modules/",
-  "dist/",
-  "coverage/",
-  "*.config.js"
-  ]
+  "ignorePatterns": ["node_modules/", "dist/", "coverage/", "*.config.js"]
 }
