--- a/config/.env.development
+++ b/config/.env.development
@@ -1,6 +1,6 @@
 PORT=7800
 MONGODB_URI=mongodb+srv://root:root@cluster0.a6hx6ac.mongodb.net
-DB_NAME=techgik
+DB_NAME=chatApp
 NODE_ENV=development
 NODE_VERSION=22.12.0
 
