--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
     "uuid": "^10.0.0",
     "winston": "^3.13.0"
   },
