--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -29,7 +29,7 @@ jobs:
           path: . # Change path if necessary
 
   deploy:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     needs: build
 
     steps:
