yml branch updated

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Node.js App
 on:
   push:
     branches:
-      - main # Change if using a different branch
+      - master # Change if using a different branch
 
 jobs:
   build:
