--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,33 +11,33 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
 
-      - name: Run tests
-        run: npm test
+      #- name: Run tests
+      # run: npm test
 
-      - name: Build the app
-        run: npm run build
+      # - name: Build the app
+      #  run: npm run build
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: build
-          path: . # Change path if necessary
+      #- name: Upload artifact
+      # uses: actions/upload-artifact@v4
+      #with:
+      # name: build
+      #path: . # Change path if necessary
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: build
-          path: . # Change path if necessary
+      # - name: Download artifact
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: build
+      #     path: . # Change path if necessary
 
       - name: Deploy to EC2
         env:
