--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,39 +10,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Check out the repository code
       - name: Check out code
         uses: actions/checkout@v2
 
-      # 2. Set up SSH: Write the private key and update known_hosts
       - name: Set up SSH key and known_hosts
         run: |
-          # Create the SSH directory if it does not exist
-          sudo mkdir -p ~/.ssh
+          # Create the SSH directory with proper permissions
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
 
           # Write the private key to a file and secure it
           echo "$SSH_PRIVATE_KEY" > private_key.pem
           chmod 600 private_key.pem
 
-          # Use ssh-keyscan to fetch and add the host's SSH key to known_hosts
-          ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts
+          # Remove any existing known_hosts file, create a new one, and set proper permissions
+          rm -f ~/.ssh/known_hosts
+          touch ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
 
-          # Optional: For debugging (remove in production)
-          # cat ~/.ssh/known_hosts
+          # Fetch and add the host's SSH key to known_hosts securely
+          ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           HOST: ${{ secrets.HOST }}
 
-      # 3. Copy files to the EC2 instance using scp
       - name: Copy files to EC2
         run: |
           scp -i private_key.pem -r . ${{ secrets.USER }}@${{ secrets.HOST }}:/home/ubuntu/app
 
-      # 4. Connect via SSH to install dependencies and restart your app
       - name: Deploy on EC2
         run: |
           ssh -i private_key.pem ${{ secrets.USER }}@${{ secrets.HOST }} << 'EOF'
-            cd /home/ubuntu/app
             npm install --legacy-peer-deps
             pm2 restart all || pm2 start index.js --name my-node-app
             exit
