--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Set up SSH key and known_hosts
         run: |
-          # Create the SSH directory with proper permissions:
+          # Create the SSH directory with proper permissions
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
 
@@ -41,6 +41,7 @@ jobs:
       - name: Deploy on EC2
         run: |
           ssh -i private_key.pem ${{ secrets.USER }}@${{ secrets.HOST }} << 'EOF'
+            cd /home/ubuntu/app
             npm install --legacy-peer-deps
             pm2 restart all || pm2 start index.js --name my-node-app
             exit
