--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,9 @@ jobs:
 
       - name: Deploy on EC2
         run: |
-          ssh -i private_key.pem ${{ secrets.USER }}@${{ secrets.HOST }} << 'EOF'
+          ssh -t -i private_key.pem ${{ secrets.USER }}@${{ secrets.HOST }} << 'EOF'
+            # Explicitly load nvm (if using nvm)
+            export NVM_DIR="$HOME/.nvm" [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
             cd /home/ubuntu/app
             npm install --legacy-peer-deps
             pm2 restart all || pm2 start index.js --name my-node-app
