--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Archive application excluding .git
         run: |
-          tar --exclude='.git' -czf app.tar.gz .
+          git archive --format=tar.gz --output=app.tar.gz HEAD
 
       - name: Copy application archive to EC2
         run: |
@@ -48,6 +48,7 @@ jobs:
             # Explicitly load nvm (if using nvm)
             export NVM_DIR="$HOME/.nvm" [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
             cd /home/ubuntu/app
+            tar -xzf app.tar.gz
             npm install --legacy-peer-deps
             pm2 restart all || pm2 start index.js --name my-node-app
             exit
